replace title with correct one

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>Magic AR Basketball Game - encantar.js WebAR demo</title>
+        <title>WebAR demo</title>
         <link href="../assets/demo.css" rel="stylesheet">
         <script src="../../dist/encantar.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/babylonjs@7.38.0/babylon.min.js"></script>
