--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>WebAR demo</title>
-        <link href="../assets/demo.css" rel="stylesheet">
-        <script src="../../dist/encantar.min.js"></script>
+        <link href="assets/demo.css" rel="stylesheet">
+        <script src="dist/encantar.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/babylonjs@7.38.0/babylon.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/babylonjs-loaders@7.38.0/babylonjs.loaders.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/babylonjs-gui@7.38.0/babylon.gui.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/cannon@0.6.2/build/cannon.min.js"></script>
-        <script src="../../plugins/babylon-with-encantar.js"></script>
-        <script src="../../plugins/extras/asset-manager.js"></script>
+        <script src="plugins/babylon-with-encantar.js"></script>
+        <script src="plugins/extras/asset-manager.js"></script>
         <script type="module" src="./src/main.js"></script>
     </head>
     <body>
-        <img id="referenceImage-1" src="../assets/my-reference-image.webp" hidden>
-        <img id="referenceImage-2" src="../assets/marker.png" hidden>
+        <img id="referenceImage-1" src="assets/my-reference-image.webp" hidden>
+        <img id="referenceImage-2" src="assets/marker.png" hidden>
         <div id="ar-viewport"></div>
     </body>
 </html>
